Fixed users/login form alignment

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -59,7 +59,7 @@ h1 a { color: inherit;}
 
 fieldset {border-top: 1px solid #999;}
 fieldset legend {font-size:123.1%;margin:1em 0;padding-right:0.5em;font-weight:bold}
-div.input.text > label, div.input.select > label, div.input.datetime > label  {margin-right:0.5em;min-width: 8em;display:inline-block;text-align:left;x-background-color:#EAEAEA}
+div.input.text > label, div.input.select > label, div.input.datetime > label, div.input.password > label  {margin-right:0.5em;min-width: 8em;display:inline-block;text-align:left;x-background-color:#EAEAEA}
 input[type=checkbox] {margin-right: 0.5em;}
 div.input > textarea {width:80%;min-width:150px;max-width:500px;}
 fieldset span.pull {margin-left:8.5em;}
